--- a/src/app/dashboard/dashboard-workspace/dashboard-workspace.component.scss
+++ b/src/app/dashboard/dashboard-workspace/dashboard-workspace.component.scss
@@ -72,7 +72,7 @@
     }
   }
 
-  @media screen and (max-width: 1500px) {
+  @media screen and (max-width: 1570px) {
     /deep/ .cdk-column-timestamp-status {
       display: none;
     }
@@ -90,8 +90,14 @@
     }
   }
 
-  @media screen and (max-width: 1100px) {
+  @media screen and (max-width: 1320px) {
     /deep/ .cdk-column-createdAt {
+      display: none;
+    }
+  }
+
+  @media screen and (max-width: 1060px) {
+    /deep/ .cdk-column-template {
       display: none;
     }
   }
