--- a/src/app/workflow/workflow.component.scss
+++ b/src/app/workflow/workflow.component.scss
@@ -1,6 +1,6 @@
 .workflow {
   /deep/ .workflow-executions-list {
-    @media screen and (max-width: 1500px) {
+    @media screen and (max-width: 1580px) {
       /deep/ .cdk-column-template {
         display: none;
       }
