--- a/src/app/workspace/workspace-list/workspace-list.component.scss
+++ b/src/app/workspace/workspace-list/workspace-list.component.scss
@@ -46,4 +46,16 @@
       color: $darkest-gray;
     }
   }
+
+  @media screen and (max-width: 1200px) {
+    /deep/ .cdk-column-timestamp-status {
+      display: none;
+    }
+  }
+
+  @media screen and (max-width: 950px) {
+    /deep/ .cdk-column-createdAt {
+      display: none;
+    }
+  }
 }
